<resources>
    <string name="app_name">Closer share location</string>
    <string name="app_name_splash">Closer\nshare\nlocation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text_ok">Ok</string>
    <string name="closer">Closer</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="login">Login</string>
    <string name="or_log_in_by">or LOG IN by</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="verification">VERIFICATION</string>
    <string name="a_message_with_verification_code_was_sent_to_your_email">A message with verification code was sent to your Email.</string>
    <string name="already_have_account">Already have account?</string>
    <string name="don_t_receive_the_code">Don\'t receive the code</string>
    <string name="type_verification_code">Type verification code</string>
    <string name="verify">VERIFY</string>
    <string name="type_your_email">TYPE YOUR EMAIL</string>
    <string name="we_will_send_you_instruction_on_how_to_reset_your_password">We will send you instruction on how to reset your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>
    <string name="set_new_password">SET NEW PASSWORD</string>
    <string name="type_your_new_password">Type your new password</string>
    <string name="back"><u>back</u></string>
    <string name="password_invalid_warning">Your password must be at least 8 characters</string>
    <string name="please_enter_a_valid_email">Please enter a valid email!!</string>
    <string name="your_name">Username</string>
    <string name="login_successful">Login successful</string>
    <string name="an_otp_is_being_sent_to_you_please_check_spam_email">An otp is being sent to you, please check spam email</string>
    <string name="something_go_wrong_please_try_again">Something go wrong, please try again</string>
    <string name="login_failed_wrong_password">Login failed: wrong password</string>
    <string name="register_successful">Register successful</string>
    <string name="register_failed_please_check_your_otp">Register failed, please check your OTP</string>
    <string name="an_account_has_already_registered_with_this_email_please_use_another">An account has already registered with this email, please use another</string>
    <string name="press_back_again_to_quit">Press back again to quit</string>
    <string name="share_post">Share post</string>
    <string name="post">Post</string>
    <string name="anyone">Anyone</string>
    <string name="what_do_you_want_to_talk_about">What do you want to talk about?</string>
    <string name="logging_you_in">Logging you in</string>
    <string name="failed_to_create_post_please_try_again_later">Failed to create post, please try again later!</string>
    <string name="posted_successful">Posted successful</string>
    <string name="this_post_is_no_longer_existed">This post is no longer existed</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="post_comment_failed_please_try_again_later">Post comment failed, please try again later!</string>
    <string name="describe_it_in_details_here">describe it in details here</string>
    <string name="please_enter_at_least_title_or_description">Please enter at least title or description</string>
    <string name="remain_image_count">+%d</string>
    <string name="authenticate_failed_wrong_otp">Authenticate failed, wrong otp</string>
    <string name="confirmation_password_is_incorrect">Confirmation password is incorrect</string>
    <string name="reset_password_successful">Reset password successful</string>
    <string name="reset_password_failed_please_try_again_later">Reset password failed, please try again later</string>
    <string name="category">Category</string>
    <string name="notification">Notification</string>
    <string name="personal">Personal</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="posts">Posts</string>
    <string name="view_all">View all</string>
    <string name="add_friend">Add friend</string>
    <string name="message">Message</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="failed_sending_friend_request_please_try_again_later">Failed sending friend request, please try again later</string>
    <string name="accept">Accept</string>
    <string name="deny">deny</string>
    <string name="type_a_message">Type a message...</string>
    <string name="message_is_empty">Message is empty</string>
    <string name="unknown">Unknown</string>
    <string name="choose_image">Choose Image</string>
    <string name="my_qr_code">My QR Code</string>
    <string name="error_get_user_information">Error get user information</string>
    <string name="did_not_find_any_qr_code">Did not find any qr code</string>
    <string name="scan">Scan</string>
    <string name="share">Share</string>
    <string name="type_to_search">Type to search ...</string>
    <string name="let_s_create_an_avatar">Let\'s create an avatar</string>
    <string name="the_image_below_is_your_currently_default_avatar">The image below is your currently default avatar</string>
    <string name="let_s_change_it">let\'s pick a new one</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="skip">Skip</string>
    <string name="may_us_know_your_phone_number">May us know your phone number?</string>
    <string name="your_phone_number_will_be_use_for_discover_more_connection_from_other_people">Your phone number will be use to discover more connection from other people</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="set_phone_number">Set phone number</string>
    <string name="some_thing_went_wrong_please_try_again_later">Some thing went wrong, please try again later!</string>
    <string name="upload">Upload</string>
    <string name="failed_to_update_phone_number_please_try_again_later">Failed to update phone number, please try again later!</string>
    <string name="there_is_no_comment_yet">There is no comment yet</string>
    <string name="map_type">Map Type</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="your_friends">Your friends</string>
    <string name="avatar">Avatar</string>
    <string name="bind">Bind</string>
    <string name="modify_password">Modify Password</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_name">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="camera">Camera</string>
    <string name="select_from_the_album">Select from the album</string>
    <string name="cancel">Cancel</string>
    <string name="use_photo">Use Photo</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="permission_camera_description">Need to scan the QR Code to connect and bind the device, is it allowed to open the camera.</string>
    <string name="permission_camera_title">“ Closer ” Would like to access the camera?</string>
    <string name="allow">Allow</string>
    <string name="permission_location_title">“ Closer ” Do you want to allow access to your location?</string>
    <string name="permission_location_description">When to get location permission for your device. Please open it manually. Otherwise. It cannot be used normally.</string>
    <string name="update_username">Update username</string>
    <string name="enter_your_new_username">Enter your new username</string>
    <string name="no_more_than_32_characters_among_chinese_letters_and_symbols">No more than 32 characters among chinese, letters and symbols(_-@).</string>
    <string name="success_update_username">Success Update Username</string>
    <string name="update_password">Update Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="success_update_password">Success Update Password</string>
    <string name="enter_address">Enter Address</string>
    <string name="update_address">Update Address</string>
    <string name="save">Save</string>
    <string name="address_updated">Address Updated</string>
</resources>
