<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        app:showAsAction="ifRoom"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/category"
        app:showAsAction="ifRoom"
        android:title="@string/category"
        android:icon="@drawable/ic_category"/>
    <item
        android:id="@+id/notification"
        app:showAsAction="ifRoom"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"/>
    <item
        android:id="@+id/personal"
        app:showAsAction="ifRoom"
        android:title="@string/personal"
        android:icon="@drawable/ic_profile_selected"/>
</menu>
