<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bg_login"
            android:src="@drawable/bg_login"
            android:layout_alignParentTop="true"
            android:layout_above="@id/login_container"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_marginBottom="-32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/app_name"
            android:text="@string/closer"
            android:textSize="50sp"
            android:shadowColor="@color/purple_200"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dancing_script_bold"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/welcome"
            android:textSize="100sp"
            android:shadowColor="@color/purple_200"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="10"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/whisper_regular"
            android:layout_below="@id/app_name"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_alignParentBottom="true"
            android:paddingHorizontal="30dp"
            android:paddingVertical="40dp"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_top_radius_28"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:text="@string/verification"
                android:fontFamily="@font/circular_std_medium"
                android:layout_marginTop="-26dp"
                android:visibility="gone"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/text_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_description"
                android:text="@string/a_message_with_verification_code_was_sent_to_your_mobile_phone"
                android:fontFamily="@font/circular_std_medium"
                android:textAlignment="center"
                android:paddingHorizontal="24dp"
                android:paddingVertical="16dp"
                android:layout_marginTop="14dp"
                android:visibility="gone"
                android:textSize="16sp"
                android:layout_marginBottom="40dp"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/text_primary"
                android:background="@drawable/bg_radius_12"
                android:backgroundTint="@color/primary_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/tv_email"
                android:hint="@string/email"
                android:layout_marginTop="0dp"
                style="@style/CommonEditText" />

            <EditText
                android:id="@+id/tv_password"
                style="@style/CommonEditText"
                android:hint="@string/password"
                android:drawableEnd="@drawable/ic_eye" />

            <EditText
                android:id="@+id/tv_confirm_password"
                style="@style/CommonEditText"
                android:visibility="gone"
                android:hint="@string/password"
                android:drawableEnd="@drawable/ic_eye" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:text="@string/forgot_password"
                android:fontFamily="@font/circular_std_medium"
                android:textSize="14sp"
                android:letterSpacing="0.15"
                android:layout_marginTop="40dp"
                android:textColor="@color/text_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/btn_login"
                android:text="@string/login"
                android:textAllCaps="true"
                android:background="@drawable/bg_rounded_gradient"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/circular_std_medium"
                android:textSize="16sp"
                android:layout_marginTop="40dp"
                android:paddingVertical="14dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_or_login_by"
                android:text="@string/or_log_in_by"
                android:fontFamily="@font/circular_std_medium"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:letterSpacing="0.15"
                android:layout_marginTop="40dp"
                android:textColor="@color/black_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/oauth_container"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_google"
                    android:src="@drawable/ic_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/img_facebook"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_already_had_account"
                    android:text="@string/don_t_have_account"
                    android:textSize="16sp"
                    android:fontFamily="@font/circular_std_medium"
                    android:textColor="@color/black_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_login_signup"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:layout_marginStart="4dp"
                    android:textAllCaps="true"
                    android:fontFamily="@font/circular_std_medium"
                    android:textColor="@color/text_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>
