<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dancing_script_bold"
            android:text="@string/may_us_know_your_phone_number"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvInstructionPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/your_phone_number_will_be_use_for_discover_more_connection_from_other_people"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            style="@style/CommonEditText"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:hint="@string/your_phone_number"
            android:inputType="phone"
            android:letterSpacing="0.5"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvInstructionPhoneNumber"
            tools:text="0869550373" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUploadPhoneNumber"
            style="@style/DefaultMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_gradiant_primary"
            android:fontFamily="@font/circular_std_medium"
            android:paddingVertical="14dp"
            android:text="@string/set_phone_number"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTintMode="multiply"
            app:cornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@+id/edtPhoneNumber"
            tools:layout_editor_absoluteX="32dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_animation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="14dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btnUploadPhoneNumber"
            app:layout_constraintTop_toTopOf="@id/btnUploadPhoneNumber"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/white_dot_loading" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSkip"
            style="@style/DefaultMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:elevation="0dp"
            android:fontFamily="@font/circular_std_medium"
            android:padding="12dp"
            android:stateListAnimator="@null"
            android:text="@string/skip"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUploadPhoneNumber" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
